Bug 246418 - Some items are not properly aligned in views and widgets
Summary: Some items are not properly aligned in views and widgets
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-01 14:05 UTC by Thomas Baumgart
Modified: 2010-08-01 14:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-08-01 14:05:51 UTC
Version:           unspecified (using KDE 4.3.5) 
OS:                Linux

In some cases when the default alignment is changed by the application (to e.g. Qt::AlignRight) the default vertical alignment is overridden. This leads to columns showing up in different vertical alignments

Reproducible: Always


Actual Results:  
Left aligned and right aligned columns in e.g. the schedule view ar misaligned vertically.

Expected Results:  
No matter what horizontal alignment is chosen, the vertical alignment is the same.
Comment 1 Thomas Baumgart 2010-08-01 14:06:37 UTC
SVN commit 1157877 by tbaumgart:

Add vertical centered alignment where necessary

BUG: 246418

 M  +1 -1      dialogs/kmymoneypricedlg.cpp  
 M  +1 -1      models/accountsmodel.cpp  
 M  +3 -3      views/kinvestmentview.cpp  
 M  +1 -1      views/kscheduledview.cpp  
 M  +2 -1      widgets/transaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1157877