Add vertical centered alignment where necessary

BUG: 246418

svn path=/trunk/extragear/office/kmymoney/; revision=1157877